apperd: Restrict creation of KJobs to the more interesting transaction roles

This is essentially a backport of what's already present in master/
branch.

BUG: 318864
REVIEW: 117990